--- a/ConsoleApp/ConsoleApp.fsproj
+++ b/ConsoleApp/ConsoleApp.fsproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp2.0</TargetFramework>
-    </PropertyGroup>
-
-    <ItemGroup>
-        <Compile Include="Program.fs"/>
-    </ItemGroup>
-
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+  </PropertyGroup>
+  <ItemGroup>
+    <Compile Include="Program.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MemberLibrary\MemberLibrary.fsproj" />
+    <ProjectReference Include="..\OrderLibrary\OrderLibrary.fsproj" />
+  </ItemGroup>
 </Project>
